# ids-uncertainty

./: .zenodo.json  LICENSE  README.md  aggregated_results.json  config.yaml  pyproject.toml
code/analysis/: evaluate_phase0.py  metrics_calculator.py
code/data_processing/: cicids_converter.py  dataset_loader.py  generate_cicids_test.py
code/models/: config_loader.py  enum_loader.py  ids_models.py
code/runners/: baseline_runner.py  composite_runner.py  ensemble_runner.py  hybrid_runner.py  monte_carlo_runner.py
code/utilities/: retry_utils.py
datasets/: cicids2017_test_50.jsonl  cicids2018_test_50.jsonl
results/baseline/groq-kimi_cicids/: baseline_results.jsonl
results/baseline/groq-kimi_cicids2018/: baseline_results.jsonl
results/baseline/nvidia-llama-70b_cicids/: baseline_results.jsonl
results/baseline/nvidia-llama-70b_cicids2018/: baseline_results.jsonl
results/baseline/nvidia-llama4-scout_cicids/: baseline_results.jsonl
results/baseline/nvidia-llama4-scout_cicids2018/: baseline_results.jsonl
results/baseline/openai-gpt-oss-20b_cicids/: baseline_results.jsonl
results/baseline/openai-gpt-oss-20b_cicids2018/: baseline_results.jsonl
results/baseline/qwen3-next-80b_cicids/: baseline_results.jsonl
results/baseline/qwen3-next-80b_cicids2018/: baseline_results.jsonl
results/composite/groq-kimi_cicids/: composite_results.jsonl
results/composite/groq-kimi_cicids2018/: composite_results.jsonl
results/composite/nvidia-llama-70b_cicids/: composite_results.jsonl
results/composite/nvidia-llama-70b_cicids2018/: composite_results.jsonl
(+37 files in other folders)
